--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,11 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
+  --font-montserrat: var(--font-montserrat);
+  --font-poppins: var(--font-poppins);
+  --font-lexendexa: var(--font-lexendexa);
+  --font-lexendmega: var(--font-lexendmega);
+  --font-inter: var(--font-inter);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
